Acualizacion del css y del nav de las paginas

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -38,8 +38,8 @@ color:white;
 .navbar-inverse .navbar-brand {
     color: #ffffff;
 }
-.navbar-inverse .container-fluid .navbar-header>a:hover,
-.navbar-inverse .container-fluid .navbar-header>a:focus { 
+.navbar-default .container-fluid .navbar-header>a:hover,
+.navbar-default .container-fluid .navbar-header>a:focus { 
     background-color: #2c2c2c}
 
 
@@ -141,4 +141,30 @@ p{
     font-family: 'Kaushan Script';
     text-align: justify;
     font-size: 15px;
+}
+
+
+@media screen and (max-width:980px) {
+        
+        img{
+            width: auto;
+            height: auto;
+        }
+
+        .col-md-10, .col-md-6, .col-md-3{
+            height: auto;
+            width: auto;
+        height: auto;
+        margin: 10px;
+        margin-left: auto;
+        }
+        .col-md-10{margin-left: 220px;}
+
+    }
+@media screen and (max-width:768px) {
+    .navbar{
+        background-color: #2c2c2c;
+    }
+    .col-md-6, .col-md-3, .col-md-10{margin-left: auto;margin: 10px;}
+    .navbar-collapse{width: auto;position: fixed;bottom: auto;}
 }
