--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,146 +1,94 @@
-
 body{
     background-color:#f0f3f4;
 }
 
-
-.sidebar{
-    width: 220px;
-    position: fixed;
-    background-color: #283744;
-    top:50px;
-    border-radius: 0;
-    bottom: 0;
-    z-index: 1000;
-}
-.sidebar{
-    background:#2c2c2c;
-    color:aliceblue;
-    position: fixed;
-    z-index: 1000;
-    bottom: 0;
-    top:50px;
+.logo{
+    height: 50px;
+    margin-left:50px;
 }
 
-.col-md-10{
+.navbar-default .navbar-nav>li>a {
+    color: black;
+    font-size: 18;
+}
+.col-md-12{
  top:75px;   
 }
-.navbar-brand{
-width: 220px;
-text-align: center;
-background-color: #2c2c2c;
-font-family: 'Kaushan Script', cursive;
-font-size: 20px;
-color:white;
-}
 
-
-.navbar-inverse .navbar-brand {
-    color: #ffffff;
+.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover,
+ .navbar-default .navbar-nav>.active>a:focus {
+    color: black;
+    background-color: #e7e7e7;
 }
 .navbar-default .container-fluid .navbar-header>a:hover,
 .navbar-default .container-fluid .navbar-header>a:focus { 
-    background-color: #2c2c2c}
-
-
-
-.navbar{
-background-color:  #ffffff;
-border:0;
+    background-color: #2c2c2c
 }
-.logo{
-    margin-left:50px;
-    width: 75px;
-    height: 75px;
 
-}
-.sidebar-form {
-    border-radius: 2px;
+.sidebar-form {   
     border: 0px solid #555;
-    margin: 10px 0px;
 }
 
-
-.sidebar-form input[type="text"] {
-    color: #f7f7f7;
-    border-top-left-radius: 2px !important;
-    border-top-right-radius: 0 !important;
-    border-bottom-right-radius: 0 !important;
-    border-bottom-left-radius: 2px !important;
-}
-
-.sidebar-form input[type="text"],
-.sidebar-form .btn.btn {
-    box-shadow: none;
-    background-color: rgba(255, 255, 255, 0.1);
-    border: 0 solid rgba(255, 255, 255, 0.1);
-    height: 30px;
-    outline: none;
-}
 .sidebar-form .btn {
     color: #f7f7f7;}
-.btn-default{
-    margin:10px;
-background-color: white;
-}
-
 
 .col-md-6 .container-fluid >p{
     text-align: center;
-    font-family: 'Kaushan Script', cursive;
-font-size: 25px;
-color: black;
+    font-family: Consolas, monaco, monospace;
+    font-size: 25px;
+    color: black;
 }
 
-.col-md-6 .container-fluid{
-    border-radius: 20px;
-    background-color: white;
-    padding: 15px;
-}
+
+
 .carousel-inner > .item > img,
-  .carousel-inner> .item > a > img {
-      width: 500px;
+.carousel-inner> .item > a > img {
+      width: 600px;
       height: 300px;
-      margin: auto;
+      margin: 0;
   }
 .item{
 height: 300px;
   }
+
 .navbar-left >.activo >li >a{
     background-color:#666;
     color:white;
 }
+
 .navbar-left >ul >li >a{
 color:black;
 }
 
-.col-md-3 .container-fluid{
-    border-radius: 20px;
-    background-color: white;
+.col-md-6 .container-fluid >p{
     text-align: center;
-    padding: 15px;
-
+    font-family: Consolas, monaco, monospace;
+    font-size: 25px;
+    color: black;
 }
 
 .row .col-md-3 .container-fluid >a >img {
-      width: 200px;
+      width:273px;
       height: 200px;
   }
+
 a:link{   
  text-decoration:none;   
 }   
-.col-md-10 .container-fluid{
+.container-fluid> p, .container-fluid a> p{
     background-color: white;
-}
-.col-md-10 .container-fluid .col-md-3 .row .col-md-3{
+    margin: 0px;
+    }
+.col-md-12 .container-fluid .col-md-3 .row .col-md-3{
 
     text-align: center;
-    padding: 15px;
+    
 }
-p{
-    font-family: 'Kaushan Script';
-    text-align: justify;
-    font-size: 15px;
+.col-md-3 .container-fluid a >p{
+    text-align: center;
+    font-family: Consolas, monaco, monospace;
+    font-size: 25px;
+    color: black;
 }
 
 
@@ -151,20 +99,19 @@ p{
             height: auto;
         }
 
-        .col-md-10, .col-md-6, .col-md-3{
+        .col-md-12, .col-md-6, .col-md-3{
             height: auto;
             width: auto;
         height: auto;
         margin: 10px;
         margin-left: auto;
         }
-        .col-md-10{margin-left: 220px;}
 
     }
 @media screen and (max-width:768px) {
     .navbar{
         background-color: #2c2c2c;
     }
-    .col-md-6, .col-md-3, .col-md-10{margin-left: auto;margin: 10px;}
+    .col-md-6, .col-md-3, .col-md-12{margin-left: auto;margin: 10px;}
     .navbar-collapse{width: auto;position: fixed;bottom: auto;}
 }
