--- a/css/estilo.css
+++ b/css/estilo.css
@@ -14,6 +14,18 @@ body{
     top: -25px;
 
 }
+.entrenador
+{
+    display: inline-block;
+    margin-left: 90px;
+    margin-right: auto; 
+}
+
+.perfil
+{
+    width: 100px;
+    height: 100px;
+}
 
 .navbar-default .navbar-nav>li>a {
     color: black;
